# Interactive-Animatable-Avatar

./: .gitignore  data_make.bat  data_make_smpl.bat  readme.md  readme_ja.md
Canonicalization/: AffectSkinWeights.cpp  CMakeLists.txt  CMakeLists_a.txt  CMakeLists_s.txt  Poisson_rec.py  README.md  SkinWeights.cpp  obj.py  ply.py  rotations.py  smpl_utils.py
Canonicalization/FitSMPL_python/: CMakeLists.txt  MatchSMPL.cpp  README.md  Refine_FitSMPL_Scan.py  Refine_FitSMPL_Scan_for_POP.py  Refine_FitSMPL_Scan_for_POP_auto.bat  Refine_FitSMPL_Scan_for_POPcape_point2point.py  obj.py  ply.py  smpl_utils.py
Canonicalization/FitSMPL_python/smpl_webuser/: serialization.py  verts.py
Canonicalization/FitSMPL_python/smplify_public/code/lib/: max_mixture_prior.py  robustifiers.py
Canonicalization/FitSMPL_python/smplify_public/code/models/: gmm_08.pkl
Canonicalization/FitSMPL_python/utils/: pose_init_2_bin.py
Canonicalization/include/: CubicMesh.h  LevelSet.h  MeshUtils.h  TetraMesh.h  Utilities.h  cutils_math.h
Canonicalization/src/: CubicMesh.cpp  Utilities.cpp  main.cpp
Pose2Texture/: Reconst_debug.bat  Reconstruct_for_2path.py  main.py  make_displacementTexture_for_2path_for_bat.py  mlflow.db  pop_etp.bat  pop_itp.bat  snarf_etp.bat  snarf_itp.bat
Pose2Texture/Evaluate/: chamfer_distance_kaolin.py  chamfer_distance_p2p.py  chamfer_distance_vs_pop_itp.bat  chamfer_summary_1.bat  readme.md  rendering.py  save_hist_from_npz.py  save_hist_itp.bat
Pose2Texture/Evaluate/render/: img2video.bat  img2video.py  render_config.jsonc  rendering_blender.py
Pose2Texture/conf/: config.yaml
Pose2Texture/conf/model/: default.yaml
Pose2Texture/conf/reconst/: default.yaml
Pose2Texture/conf/train/: Cape_Snarf_blazerlong_volleyball_etp.yaml  Cape_Snarf_blazerlong_volleyball_itp.yaml  Cape_pop_blazerlong_volleyball_all.yaml  Cape_pop_blazerlong_volleyball_etp.yaml  Cape_pop_blazerlong_volleyball_itp.yaml  Debug_only_reconst_clothes_pop.yaml
Pose2Texture/lib/: make_displacementTexture_utils.py  make_edge_neighbor_vtxlist.py  meshes_utils.py  reconstruct_utils.py  skinning_utils.py  smplpytorch_for_nakedBody.py  texture_avg_gpu.py
Pose2Texture/models/: Generater.py  dataloader.py  ml_flow_writer.py  net_modules.py  pose2texnetWithPoseAware.py
Pose2Texture/utils/: meshlab_utils.py  move.py  resample.py
data_process/: BuildDataSet.py  BuildDataSet_CAPE.py  CMakeLists.txt  README.md  Revert_position.py
data_process/include/: Fit.h  MarchingCubes.h  MeshUtils.h  TetraMesh.h  Utilities.h  cudaTypes.cuh
data_process/include_gpu/: Fit.h  Fit_gpu.cuh  LevelSet.h  LevelSet_gpu.cuh  MarchingCubes.h  MarchingTets.h  MeshUtils.h  TetraMesh.h  Utilities.h
data_process/src/: Utilities.cpp  main.cpp
data_process/src_gpu/: .main.cpp  Fit_gpu.cu  LevelSet_gpu.cu  Utilities.cpp  main - Copy.cpp  main.cpp
env/: AITS.yml  AITS_raw.yml  delete_version.py
